[package]
name = "investengine_csv_server_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
once_cell = "1.21.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
mongodb = { version = "3.1.1" }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
yfinance-rs = "0.7.2"
urlencoding = "2.1.3"
axum = { version = "0.8.1", features = ["multipart"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
askama = "0.12.1"
askama_axum = "0.4.0"
dotenvy = "0.15.7"
futures = "0.3"
